apps/services/blinko/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: blinko-internal
  labels:
    app: blinko
  annotations:
    kube-vip.io/vipHost: blinko
spec:
  ports:
    - name: web
      port: 80
      targetPort: 1111
      protocol: TCP
  selector:
    app: blinko
  type: ClusterIP
