apps/services/blinko/base/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: blinko
  annotations:
    external-dns.alpha.kubernetes.io/hostname: blinko.labs.andrewpjackson.com
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/ttl: "120"
    cert-manager.io/cluster-issuer: letsencrypt-production
    acme.cert-manager.io/http01-edit-in-place: "true"
    kubernetes.io/ingress.class: traefik-external
  labels:
    app: blinko
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`blinko.lab.apj.dev)
      kind: Rule
      middlewares:
        - name: traefik-forward-auth
          namespace: traefik
      services:
        - name: blinko-internal
          port: 80
  tls:
    secretName: lab-apj-dev-tls
